--- a/index.html
+++ b/index.html
@@ -1016,16 +1016,14 @@
             try {
                 const fd = new FormData(form);
 
-                // FormData -> URLエンコード
-                const body = new URLSearchParams();
-                fd.forEach((v, k) => body.append(k, String(v)));
+                // FormData -> JSON（日本語nameでも安全）
+                const payload = {};
+                fd.forEach((v, k) => { payload[k] = String(v); });
 
                 const res = await fetch("https://everlink-rfq.hideakitamura714.workers.dev/", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/x-www-form-urlencoded; charset=UTF-8"
-                    },
-                    body
+                  method: "POST",
+                  headers: { "Content-Type": "application/json; charset=UTF-8" },
+                  body: JSON.stringify(payload),
                 });
 
                 if (res.ok) {
